[package]
name = "net-events"
version = "0.1.0"
authors = ["MattDevy <mattd905@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = { version = "0.9"} # features = ["capture-stream"] 
etherparse = "0.9.0"
chrono = "0.4"
cloudevents-sdk = { version = "0.4.0" }
uuid = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pub-sub = "*"
